test initial mcp on aprint